# aion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  llms-full.txt  llms.txt
.github/workflows/: ci.yml
aionpy/: __init__.py  checker.py  dot.py  engine.py  fql.py  nullflow.py  parser.py  runtime.py  typesys.py
docs/: Aion Technical Documentation.md  ai-assist.md  aion-dialect.md  architecture.md  checker.md  demo.md  examples.md  formatter.md  getting-started.md  intent-fql.md  intent.md  interop.md  language-design.md  lowering.md  lsp.md  memory.md  null-safety.md  pipelines.md  semantics.md  srs.md  stdlib.en.md  stdlib.md  strings.md  structs.md  syntax.md  tutorial.md  type-decls.md  types.md  validation.md
examples/: aggregate.aion  data_filter.aion  get_safe_first.aion  group_by_window.aion  inline_structs.aion  network_call.aion  non_null_filter.aion  process_metrics.aion  sort_products.aion  unsafe_get.aion
include/aion/: AionCompiler.h
scripts/: aion_demo.py  aion_doctor.py  aion_format.py  aion_project_init.py  aion_quickstart.py  aionc.py  run-demo.ps1  run-demo.sh
src/mlir/: AionDialect.cpp  AionOps.td  CMakeLists.txt  LowerToLinalg.cpp  Passes.cpp  Passes.td
tests/checker/: test_nullflow.py
tests/cli/: test_demo_ir.py  test_golden_ir.py
tests/cli/golden/: data_filter.mlir  (+1 more)
tests/runtime/: test_aggregate.py  test_group_window.py  test_inline_structs.py  test_interpreter.py  test_network_call.py  test_non_null_filter.py  test_safe_index.py  test_sort.py
tests/vericoding/: benchmark_suite.md
tools/: aion_lsp.py
types/: standard.aiont
